# shorty

./: .gitignore  Cargo.toml  urls.db
src/: cli.rs  main.rs  shortener.rs  url_store.rs
