[package]
name = "shorty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
rusqlite = "0.32.1"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4"] }

[[bin]]
name = "shorty"
path = "src/main.rs"
